// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render when given all the props 1`] = `
<div
  className="a b c d e f"
>
  <div
    className="d g f h i j"
  >
    <div />
    <div
      className="k"
      role="tablist"
    >
      <a
        className="cf-link cf-card__toolbar_link cf-card__toolbar_link--open"
        href="#!"
        id="card-0-drawer-one"
        onClick={[Function]}
        role="tab"
      >
        One
      </a>
      <a
        className="cf-link cf-card__toolbar_link"
        href="#!"
        id="card-0-drawer-two"
        onClick={[Function]}
        role="tab"
      >
        Two
      </a>
    </div>
  </div>
  <div>
    <div
      className="d l"
      id={undefined}
      onClick={undefined}
    >
      One Content
    </div>
    <div
      className="m n"
      id={undefined}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should render when given all the props 2`] = `
"
.a {
  display: table
}

.b {
  table-layout: fixed
}

.c {
  width: 100%
}

.d {
  border-top: 1px solid #dedede
}

.e {
  border-left: initial
}

.f:first-child {
  border-top: initial
}

.g {
  min-height: 2.96666rem
}

.h::after {
  content: ''
}

.i::after {
  display: table
}

.j::after {
  clear: both
}

.k {
  float: right
}

.l {
  padding: 1.5rem
}

.m {
  border-top: initial
}

.n {
  padding: initial
}
"
`;

exports[`should render when not given props 1`] = `
<div
  className="a b c d e f"
>
  <div
    className="d g f h i j"
  >
    <div />
    <div
      className="k"
      role="tablist"
    >
      <a
        className="cf-link cf-card__toolbar_link"
        href="#!"
        id="card-1-drawer-one"
        onClick={[Function]}
        role="tab"
      >
        One
      </a>
      <a
        className="cf-link cf-card__toolbar_link"
        href="#!"
        id="card-1-drawer-two"
        onClick={[Function]}
        role="tab"
      >
        Two
      </a>
    </div>
  </div>
  <div>
    <div
      className="l m"
      id={undefined}
      onClick={undefined}
    />
    <div
      className="l m"
      id={undefined}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should render when not given props 2`] = `
"
.a {
  display: table
}

.b {
  table-layout: fixed
}

.c {
  width: 100%
}

.d {
  border-top: 1px solid #dedede
}

.e {
  border-left: initial
}

.f:first-child {
  border-top: initial
}

.g {
  min-height: 2.96666rem
}

.h::after {
  content: ''
}

.i::after {
  display: table
}

.j::after {
  clear: both
}

.k {
  float: right
}

.l {
  border-top: initial
}

.m {
  padding: initial
}
"
`;
